add status-canvas with level-info, health, score and items (requires css and fonts)
add health to player
fix items, so you don't pick up one item multiple times

--- a/index.html
+++ b/index.html
@@ -5,17 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Peter's Playground</title>
-    <style>
-        .levels li>b {
-            cursor: pointer;
-        }
-
-        .levels li>b:hover {
-            background-color: yellow;
-        }
-
-    </style>
-
+    <link rel="stylesheet" href="game.css" type="text/css">
     <script src="js/createjs-2015.11.26.min.js"></script>
     <script src="js/game.js"></script>
     <script src="js/sprites.js"></script>
@@ -25,8 +15,10 @@
 
 <body>
 
-    <canvas id="canvas" width="1088" height="704"></canvas>
-
+    <div id="canvases">
+        <canvas id="status" width="640" height="48"></canvas>
+        <canvas id="canvas" width="1088" height="704"></canvas>
+    </div>
     <h1>This is my playground</h1>
     <p><b>Peter's Playground</b> isn't really a game, but all the components of a game, doing their best to look and feel like a game. Maybe you can think of it a bit like Garry's Mod, it is sort of an engine, not an editor, but a collections of levels I've made with the engine.<br> I'm trying to develop a 2D Tile Based game engine, and this is it.<br> Each level illustrates the next bit of work I'm doing, so earlier levels have bad AI, and later levels have more features.
     </p>
