--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
     <link rel="stylesheet" href="game.css" type="text/css">
     <script src="js/createjs-2015.11.26.min.js"></script>
+    <script src="js/webgl-0.8.2.min.js"></script>
     <script src="js/game.js"></script>
     <script src="js/sprites.js"></script>
     <script src="js/enemies.js"></script>
